--- a/Assignments/HTML & CSS/Project 07/style.css
+++ b/Assignments/HTML & CSS/Project 07/style.css
@@ -186,13 +186,14 @@ li, p{
 /* section 3 */
 .section3{
     background-color: #151515;
+    margin-bottom: 50px;
 }
 
 .sec_heading3{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 100px;
+    margin: 100px 100px;
     color: #fff;
 }
 
@@ -209,4 +210,174 @@ li, p{
 .sec_heading3 > p{
     width: 288px;
     color: rgb(207, 207, 207);
+}
+
+.cards{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 150px 100px;   
+}
+
+.card1, .card2, .card3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 320px;
+    height:300px;
+    background-color: #272727;
+    border-width: 3px;
+    border-style: solid;
+    border-image: linear-gradient(317deg, #272727, #fff)1;
+
+}
+
+.card2{
+    margin: 0 20px;
+    text-align: center;
+    background: linear-gradient(317deg, rgba(93,92,92,1) 0%, rgba(65,61,60,1) 100%);
+    margin-bottom: 100px;
+}
+
+.cardimg{
+    width: 120px;
+}
+
+.cardfont{
+    font-size: 20px;
+    margin-top: 28px;
+}
+
+/* Section 4 */
+.section4{
+    background-color: #FCEFFB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 150px; 
+}
+
+.section4 > h2{
+   font-weight: 400;
+    font-size: 65px;
+    width: 800px;
+    text-align: center;
+}
+
+.section4 > h2 > span{
+    color: #F637EC;
+    font-weight: 600;
+}
+
+.section4 > p{
+    font-size: 18px;
+    color: rgb(92, 92, 92);
+    width: 700px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.section4 > img {
+    width: 1000px;
+    position: relative;
+    bottom: 30px;
+}
+
+/* Section 5 */
+.section5{
+    background-color: #151515;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 0;
+}
+
+.section5 > h2{
+    font-weight: 500;
+    font-size: 55px;
+    width: 800px;
+    text-align: center;
+    color: #fff;
+}
+
+.section5 > h2 > span{
+    font-weight: 500;
+    color: #F637EC;
+}
+
+.section5 > p{
+    width: 450px;
+    margin: 50px 0;
+    text-align: center;
+}
+
+.card4{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    gap: 80px;
+}
+
+.card01, .card02, .card03, .card04{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: #1E1F24;
+    border-width: 3px;
+    border-style: solid;
+    border-image: linear-gradient(317deg, #272727, #fff)1;
+    padding: 20px;    
+
+}
+
+.card01{
+    background: linear-gradient(317deg, rgba(93,92,92,1) 0%, rgba(65,61,60,1) 100%);
+    border-image: linear-gradient(317deg, #272727, #fff)1;
+    height: 170px;
+}
+
+.star{
+    width: 120px;
+}
+
+.sentence{
+    font-size: 12px;
+    width: 340px;
+    margin: 15px 0;
+}
+
+.name{
+    font-size: 13px;
+    color: #fff;
+}
+
+.place{
+    font-size: 11px;
+    color: #fff;
+}
+
+.navigation{
+    display: flex;
+}
+
+.navigation{
+    margin-top: 60px;
+}
+
+.purpline{
+    width: 60px;
+    height: 10px;
+    border-radius: 50px;
+    background-color: #F637EC;
+    box-shadow: 1px 1px 40px #F637EC;
+}
+
+.circle{
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background-color: #484347;
+    margin-left: 8px;
 }
