--- a/Assignments/HTML & CSS/Project 07/style.css
+++ b/Assignments/HTML & CSS/Project 07/style.css
@@ -16,7 +16,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 15px 100px 0;color: #fff;
+    margin: 15px 100px 0;
+    color: #fff;
 }
 
 
@@ -60,6 +61,10 @@ li, p{
     color: rgb(207, 207, 207);
 }
 
+li:hover{
+    color: #F637EC;
+    cursor: pointer;
+}
 
 /* Main page */
 .main{
