--- a/Assignments/HTML & CSS/Project 08/style.css
+++ b/Assignments/HTML & CSS/Project 08/style.css
@@ -122,7 +122,7 @@ body{
 .cards{
     display: flex;
     align-items: center;
-    padding: 0 100px;
+    /* padding: 0 100px; */
     margin-top: 50px;
 }
 
@@ -131,7 +131,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 30px 20px;
+    padding: 30px;
     border: 1px solid #9B9A9A;
     border-radius: 20px;
 }
@@ -163,3 +163,64 @@ body{
     margin: 25px 0;
 }
 
+/* Support */
+/* list_1 */
+.support{
+    background-color: #fff;
+    padding: 0 100px;
+}
+
+.support > h2{
+    font-size: 56px;
+    font-weight: 600;
+    width: 1200px;
+}
+
+.support > .list_supp{
+    display: flex;
+    justify-content: space-between;
+}
+
+.support > .list_supp > .list_1 > .list, .list1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    padding: 35px 35px;
+    margin: 20px 0;
+    border: 1px solid #9B9A9A;
+    border-radius: 50px;
+    font-size: 26px;
+    font-weight: 600;
+    width: 650px;
+}
+
+.support > .list_supp > .list_1 > .list1{
+    background-color: #0C8BFD;
+    border: none;
+    color: #fff;
+}
+
+/* list_2 */
+.list_2{
+    background-color: #111010;
+    padding: 10px 30px;
+    border-radius: 30px;
+}
+
+.list_2 > .dark_list{
+    display: flex;
+    align-items: center;
+    background-color: #292828;
+    color: #D9D9D9;
+    margin: 10px 0;
+    padding: 10px 10px;
+}
+
+.list_2 > .dark_list > .circle{
+    background-color: #D9D9D9;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    margin-right: 10px;
+}
