--- a/Assignments/HTML & CSS/Project 08/style.css
+++ b/Assignments/HTML & CSS/Project 08/style.css
@@ -167,7 +167,7 @@ body{
 /* list_1 */
 .support{
     background-color: #fff;
-    padding: 0 100px;
+    padding: 0 100px 80px 100px;
 }
 
 .support > h2{
@@ -179,6 +179,10 @@ body{
 .support > .list_supp{
     display: flex;
     justify-content: space-between;
+}
+
+.support > .list_supp > .list_1{
+    margin-top: 30px;
 }
 
 .support > .list_supp > .list_1 > .list, .list1{
@@ -203,9 +207,14 @@ body{
 
 /* list_2 */
 .list_2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #111010;
-    padding: 10px 30px;
-    border-radius: 30px;
+    padding: 10px 20px;
+    margin: 50px 0 0 30px;
+    border-radius: 40px;
+    height: 635px;
 }
 
 .list_2 > .dark_list{
@@ -213,14 +222,34 @@ body{
     align-items: center;
     background-color: #292828;
     color: #D9D9D9;
-    margin: 10px 0;
-    padding: 10px 10px;
+    margin: 7px 0;
+    padding: 15px;
+    width: 450px;
+    border-radius: 50px;
 }
 
 .list_2 > .dark_list > .circle{
     background-color: #D9D9D9;
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     border-radius: 100%;
     margin-right: 10px;
+}
+
+.list_2 > .dark_list > .dark_text{
+    font-size: 20px;
+}
+
+/* Pricing */
+.pricing{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+.pricing > .arrow{
+    position: relative;
 }
