--- a/Assignments/HTML & CSS/Project 08/style.css
+++ b/Assignments/HTML & CSS/Project 08/style.css
@@ -335,7 +335,7 @@ body{
     border-radius: 50px;
     border: none;
     font-size: 16px;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     font-weight: 500;
 }
 
@@ -402,6 +402,6 @@ body{
     border-radius: 50px;
     border: none;
     font-size: 16px;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     font-weight: 500;
 }
