--- a/Assignments/HTML & CSS/Project 08/style.css
+++ b/Assignments/HTML & CSS/Project 08/style.css
@@ -421,7 +421,7 @@ body{
 }
 
 .customer_heading > h2{
-    font-weight: 400;
+    font-weight: 600;
     font-size: 48px;
     width: 400px;
 }
@@ -437,11 +437,41 @@ body{
 .cards_customer{
     display: flex;
     margin-top: 80px;
+    overflow: hidden;
+    gap: 30px;
 }
 
 .cards_customer1{
-    background-color: #111010;
+    background-color: #fff;
     border-radius: 30px;
-    color: #fff;
+    border: 1px solid #C3C2C2;
     padding: 30px;
+    /* width: 3000px; */
+    /* margin-right: 30px; */
+}
+
+.vector1{
+    width: 20px;
+}
+
+.customer_name{
+    font-size: 18px;
+    margin-top: 25px;
+    font-weight: 600;
+}
+
+.customer_desi{
+    width: 12px;
+    margin-bottom: 20px;
+}
+
+.card_para{
+    font-size: 28px;
+    margin: 25px 0;
+    width: 660px;
+}
+
+.cards_customer1:hover{
+    background-color: #111010;
+    color: #fff;
 }
