--- a/Assignments/HTML & CSS/Project 09/style.css
+++ b/Assignments/HTML & CSS/Project 09/style.css
@@ -5,16 +5,38 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/* Hero_Section */
+
+.container{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),  url(./Assets/Photos/futuristic-bg.png); 
+    background-repeat: no-repeat;
+    background-size:100%;
+    background-position: 0px -130px;
+    height: 123%;
+    width: 100%;
+    position: absolute;
+    padding: 30px 0;
+}
+
+
+
+.container > img{
+    width: 100%;
+    height: 100%;
+    object-position: 0px -130px;
+}
+
 .navbar{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 30px 100px;
+    align-items: center;   
+    margin: 0 100px;
+    color: #fff;
 }
 
 .navbar > .list_nav{
     display: flex;
-    align-items: center;
+    align-items:center;
 }
 
 .navbar > .list_nav > ul{
@@ -33,4 +55,87 @@
 
 .navbar > .btn_nav > .signin_nav{
     font-size: 14px;
+    margin-right: 10px;
+}
+
+.navbar > .btn_nav > .signup_nav{
+    background-color: #F4694C;
+    color: #fff;
+    border: none;
+    padding: 10px 30px;
+}
+
+/* Hero */
+.hero{
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    margin-top: 100px;
+    padding: 0 100px;
+}
+
+
+.left > h1{
+    width: 500px;
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.left > p{
+    width: 500px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #817E7E;
+    line-height: 25px;
+    margin: 30px 0;
+}
+
+.left > .btn_left > .btn_getstarted{
+    background-color: #F4694C;
+    padding: 15px 35px;
+    border: none;
+    color: #fff;
+}
+
+.left > .btn_left > .learnmore{
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: 14px 35px;
+    color: #fff;
+    margin-left: 20px;
+}
+
+.right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right > img{
+    width: 75px;
+    margin-top: 20%;
+}
+
+.right > .right_para{
+    display: flex;
+    margin-top: 170px;
+}
+
+.right > .right_para > .dash_right{
+    margin: 0 20px 85px 0;   
+}
+
+.right > .right_para > .arrow_right{
+    width: 55px;
+    margin: 85px  0  20px ;
+}
+
+.right > .right_para >p{
+    width: 230px;
+    font-size: 22px;
+}
+
+/* Game */
+.game{
+    margin: 200px 0;
 }
