--- a/Assignments/HTML & CSS/Project 09/style.css
+++ b/Assignments/HTML & CSS/Project 09/style.css
@@ -12,7 +12,7 @@
     background-repeat: no-repeat;
     background-size:100%;
     background-position: 0px -130px;
-    height: 123%;
+    height: 120%;
     width: 100%;
     position: absolute;
     padding: 30px 0;
@@ -137,5 +137,65 @@
 
 /* Game */
 .game{
-    margin: 200px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game > h2{
+    margin: 200px 0 50px;
+    text-transform: capitalize;
+    font-weight: 800;
+    font-size: 36px;
+    width: 50%;
+    text-align: center;
+}
+
+.cards_game{
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.card_game{
+    width: 270px;
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+    left: 10px;
+}
+
+.card_image{
+    position: absolute;
+    left: -85%;
+}
+
+.img_game{
+    display: block;
+    width: 576px;
+}
+
+.blur{
+    backdrop-filter: blur(10px);
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    height: 100px;
+    width: 100%;
+}
+
+.card_info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(255, 255, 255,0.3);
+    width: 100%;
+    height: 25%;
+}
+
+.card_left h3{
+    color: #fff;
+    
 }
